# Doc_query_chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
